# side_projects

./: .gitignore  LICENSE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  task.md
.github/ISSUE_TEMPLATE/workflows/: ruff.yml
.github/workflows/: pr-title-check.yml  ruff.yml
feed_me/: README.md  pyproject.toml
feed_me/feed_me/: task_manager.py
feed_me/src/feed_me/: __init__.py  cli.py  task_manager.py
feed_me/tests/: test_cli.py  test_task_manager.py
